Day 03 and tweak to CSS to fix overflow weirdness with pre

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -37,8 +37,8 @@ body {
 }
 
 pre {
-    overflow: auto;
-    box-sizing: border-box;
+    margin: $margin;
+    background-color: $content-background-color;
 }
 
 @media only screen and (max-width: $nominal-tablet-width) {
