--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -126,6 +126,7 @@ article {
         border-radius: 0px;
         filter: none;
         margin: 0px;
+        width: 100%;
     }
 }
 
